# polars-jaro

./: .gitignore  Cargo.toml  pyproject.toml
polars_jaro/: __init__.py
polars_string_metrics/: __init__.py
src/: hamming.rs  jaro.rs  lib.rs
