[package]
name = "polars_jaro"
version = "0.1.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polars_jaro"
crate-type = ["cdylib"]


[dependencies]
polars = "0.34.2"
pyo3-polars = { version = "0.8.0", features = ["derive"] }
smallvec = "1.11.2"
unicode-segmentation = "1.10.1"


[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
