[package]
name = "polars_string_metrics"
version = "0.2.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polars_string_metrics"
crate-type = ["cdylib"]


[dependencies]
polars = "0.35.4"
pyo3-polars = { version = "0.9.0", features = ["derive"] }
smallvec = "1.11.2"
unicode-segmentation = "1.10.1"


[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
