[tool.poetry]
name = "polars-string-metrics"
version = "0.1.2"
description = ""
authors = ["Tyler Cross <tcross@redhat.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8"
maturin = "^1.3.2"
polars = "^0.19.13"
strsim = "^0.0.3"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"


[project]
name = "polars-string-metrics"
version = "0.1.2"
description = "Polars extension providing string similarity and distance functions"
authors = [ {name = "Tyler Cross", email = "tcross@redhat.com" } ]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[project.urls]
repository = "https://github.com/wtcross/polars-string-metrics"